--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,17 @@
-<h1> Hi there, <%=userName%> </h1> 
+<h1> Hello Everyone, <%=userName%> </h1> 
 
 <h1>
-    Barry's Super Duper Page
+    Koby's Page
 </h1>
 
-<h2> all y'alls links enneagrams go here </h2>
+<h2> Git Er Done </h2>
 
 <p> 
-Barry 
-my enneagram = 9. 
-on g/h @barrycumbie
-this repo = ... studious-robot
+Kingram
+My Enneagram = Type 5. The Investigator 
+on g/h @kobyingram11
+this repo = ... fuzzy-goggles
+<a href="https://www.enneagraminstitute.com/type-5">See info abt my type!</a>
 </p>
 
 <!-- TODO: create issue, all update this page -->
